# Q4_Sol_Victor_Carvalho

./: README.md
anchor-amm/: Anchor.toml
anchor-amm/programs/anchor-amm/: Cargo.toml
anchor-escrow/: Anchor.toml  README.md  package-lock.json  package.json
anchor-escrow/programs/anchor-escrow/: Cargo.toml
anchor-escrow/tests/: anchor-escrow.ts
anchor-marketplace/: Anchor.toml  README.md
anchor-vault/: Anchor.toml  README.md  package-lock.json
anchor-vault/tests/: anchor-vault.ts
blinks-from-scratch/: package-lock.json  package.json
capstone/: README.md  justfile
capstone/frontend/: package-lock.json  package.json
capstone/server/: .env  Cargo.toml  compose.yml
capstone/server/src/: main.rs  routes.rs
capstone/server/src/controllers/: farmer_controller.rs  mod.rs  product_controller.rs  transaction_controller.rs
capstone/server/src/db/: mod.rs
capstone/server/src/models/: farmer.rs  mod.rs  product.rs  transaction.rs
capstone/server/src/services/: farmer_service.rs  mod.rs  product_service.rs  transaction_service.rs
capstone/server/static/schema/: init.sql
capstone/solana/: Anchor.toml  keypair-consumer.json  keypair-farmer.json  keypair-payer.json  metaplex_program_keypair.json  package-lock.json  package.json
capstone/solana/tests/: solana.ts
farmlink-capstone/: Anchor.toml
farmlink-capstone/tests/: farmlink-capstone.ts
nft-operations/: Anchor.toml  metadata.json  phantom-wallet.json
nft-operations/tests/: nft-operations.ts
nft-staking/: Anchor.toml  README.md
solana-starter/: README.md
solana-starter/ts/: package.json
(+86 files in other folders)
