[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "postgres",
    "uuid",
    "chrono",
] }
axum = { version = "0.7.2", features = ["macros"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }